[package]
name = "ntex-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "0.7.3", features = ["tokio"] }
time = { version = "0.3.28" }
tokio = { version = "1.32.0", features = ["time"] }
